--- a/src/components/ListaOpciones/ListaOpciones.css
+++ b/src/components/ListaOpciones/ListaOpciones.css
@@ -1,24 +1,19 @@
-.campo-texto{
-    margin: 24px 0;
-}
-
-.campo-texto label{
-    display: block;
+.lista-opciones label{
     font-family: 'Montserrat', sans-serif;
+    display: block;
     font-size: 18px;
     font-weight: 600;
     margin-bottom: 8px;
 }
 
-.campo-texto input{
+.lista-opciones select{
     font-family: 'Montserrat', sans-serif;
     width: 100%;
     background-color: #FFF;
     box-shadow: 10px 10px 30px 0px rgba(0, 0, 0, 0.08);
     border: none;
-    padding: 30px 20px;
+    padding: 24px;
     color: #A4A4A4;
     font-size: 16px;
     outline-color: #6278F7;
-    box-sizing: border-box;
 }
