--- a/src/components/Campo/Campo.css
+++ b/src/components/Campo/Campo.css
@@ -1,8 +1,8 @@
-.campo-texto{
+.campo{
     margin: 24px 0;
 }
 
-.campo-texto label{
+.campo label{
     display: block;
     font-family: 'Montserrat', sans-serif;
     font-size: 18px;
@@ -10,7 +10,7 @@
     margin-bottom: 8px;
 }
 
-.campo-texto input{
+.campo input{
     font-family: 'Montserrat', sans-serif;
     width: 100%;
     background-color: #FFF;
@@ -21,4 +21,9 @@
     font-size: 16px;
     outline-color: #6278F7;
     box-sizing: border-box;
+}
+
+.campo-color input{
+    height: 40px;
+    padding: 5px 20px;
 }
